--- a/styles/header.css
+++ b/styles/header.css
@@ -118,3 +118,36 @@
     width: 100vw;
     height: 100vh;
 }
+
+@media screen and (max-width: 1100px) {
+    .header {
+        left: 0;
+        width: 100%;
+        height: 80px;
+    }
+
+    .header-container {
+        padding: 0;
+        padding-left: 5%;
+        padding-right: 5%;
+        padding-top: 20px;
+        padding-bottom: 10px;
+    }
+
+    .logo-mobile {
+        display: unset;
+    }
+
+    .title {
+        display: none;
+    }
+
+    .help-icon {
+        display: none;
+    }
+
+    .user-icon {
+        height: 45px;
+        width: 45px;
+    }
+}
