--- a/templates/addTaskTemplate.html
+++ b/templates/addTaskTemplate.html
@@ -80,7 +80,7 @@
         <span class="red">*</span><div>This field is required</div>
     </div>  
     <div class="create">
-        <button onclick="clearInput()" class="clear">Clear <img src="../img/iconoir_cancel.png"></button>
+        <button type="reset" class="clear">Clear <img src="../img/iconoir_cancel.png"></button>
         <button onclick="createTask()" class="createTask">Create Task <img src="../img/check.png"></button>
     </div>
 </div>        
