change image subtask input

--- a/styles/index.css
+++ b/styles/index.css
@@ -34,6 +34,14 @@ h1 {
     height: 33px;
 }
 
+.width12 {
+    width: 12px;
+}
+
+.width14 {
+    width: 14px;
+}
+
 .width33 {
     width: 33px;
 }
