--- a/styles/board.css
+++ b/styles/board.css
@@ -286,3 +286,9 @@ height: 32px;
     background-color: #eeeeee;
     cursor: pointer;
 }
+
+.greyVerticalLineSubtasks {
+    width: 1px;
+    background-color: lightgrey;
+    height: 25px;
+}
