--- a/styles/board.css
+++ b/styles/board.css
@@ -223,7 +223,8 @@ height: 32px;
     z-index: 100;
 }
 
-#boardTaskOverlay>div>div {
+#boardTaskOverlay>div>div,
+#boardTaskOverlay>div>form {
     width: 400px;
 }
 
