--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -135,7 +135,7 @@ h5 {
 .contact-info {
     display: flex;
     align-items: center;
-    gap: 54px;
+    gap: 40px;
 }
 
 .logos {
@@ -265,6 +265,7 @@ a {
     width: 90%;
     position: relative;
     max-width: 1020px;
+    min-height: 685px;
 }
 
 .d-flex {
@@ -538,8 +539,8 @@ a {
 
 .arrow {
     position: absolute;
-    top: 20%;
-    left: 60%;
+    top: 10%;
+    left: 90%;
     display: none;
 }
 
@@ -558,8 +559,8 @@ a {
 
 .edit-delete-mobile {
     position: absolute;
-    top: 90%;
-    left: 55%;
+    top: 80%;
+    left: 80%;
     padding: 10px;
     flex-direction: column;
     align-items: flex-start;
@@ -569,16 +570,53 @@ a {
     z-index: 999;
 }
 
-@media(max-width: 1090px) {
+#blue-underline {
+    display: none;
+}
+
+@media(max-width: 1250px) {
+    .name-logos h3 {
+        font-size: 32px;
+    }
+
+    .user {
+        height: 100px;
+        width: 100px;
+    }
+
+    .contact-headline h2 {
+        font-size: 18px;
+    }
+
+    .contact-info {
+        gap: 10px;
+    }
+}
+
+@media(max-width: 1100px) {
     .left-side {
         width: 100vw;
         z-index: 2;
+        margin-top: 80px;
+        height: calc(100vh - 160px);
+        margin-left: 0;
+    }
+
+    .contact-area {
+        height: calc(100vh - 230px);
     }
 
     .right-side {
-        width: 100vw;
+        width: calc(100vw - 80px);
         position: fixed;
         left: 232px;
+        height: calc(100vh - 160px);
+        margin-top: 80px;
+        left: 0;
+    }
+
+    .right-side-infos {
+        height: calc(100vh - 160px);
     }
 
     .arrow {
@@ -690,7 +728,7 @@ a {
         width: 120px;
         height: 120px;
         position: absolute;
-        top: 30%;
+        top: 200px;
     }
 
     .button2 {
@@ -718,7 +756,7 @@ a {
         justify-content: center;
         position: absolute;
         top: 90%;
-        left: 55%;
+        left: 90%;
         cursor: pointer;
     }
 
@@ -727,14 +765,120 @@ a {
     }
 
     .successfully-deleted {
-        top: 180px;
+        top: 80%;
+        width: 70%;
     }
 
     .successfully-saved {
-        top: 180px;
+        top: 80%;
+        width: 70%;
     }
 
     .successfully-created {
-        top: 180px;
+        top: 80%;
+        width: 70%;
+    }
+}
+
+@media(max-width: 600px) {
+    .name-logos h3 {
+        font-size: 36px;
+    }
+
+    .user {
+        height: 80px;
+        width: 80px;
+        font-size: 27px;
+    }
+
+    .right-side {
+        padding-left: 20px;
+        padding-right: 20px;
+        width: calc(100vw - 40px);
+    }
+
+    .right-side h1 {
+        font-size: 47px;
+    }
+
+    .right-side h2 {
+        font-size: 20px;
+    }
+
+    .blue-container h1 {
+        font-size: 47px;
+    }
+
+    .blue-container h2 {
+        font-size: 20px;
+    }
+
+    .button3 {
+        text-align: left;
+        width: 40%;
+        min-width: 160px;
+    }
+}
+
+@media(max-width: 430px) {
+    .name-logos h3 {
+        font-size: 24px;
+        font-weight: bold;
+    }
+
+    .user {
+        height: 60px;
+        width: 60px;
+        font-size: 22px;
+    }
+
+    .arrow {
+        left: 85%;
+    }
+
+    .mobile-menu {
+        left: 85%;
+    }
+
+    .blue-container h1 {
+        font-size: 40px;
+    }
+
+    .blue-container h2 {
+        font-size: 16px;
+    }
+
+    .close-button2 {
+        right: 16px;
+        top: 24px;
+    }
+
+    .edit-delete-mobile {
+        left: 75%;
+    }
+
+    .button4 {
+        font-size: 16px;
+        min-width: 90px;
+    }
+
+    .button5 {
+        font-size: 16px;
+        min-width: 90px;
+    }
+}
+
+@media (max-width: 380px) {
+    .left-side {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    .add-button-mobile {
+        margin-left: 80%;
+    }
+
+    .mobile-menu {
+        top: 88%;
     }
 }
