--- a/styles/help.css
+++ b/styles/help.css
@@ -50,3 +50,51 @@ p {
 .blue {
     color: #29ABE2;
 }
+
+img {
+    cursor: pointer;
+}
+
+@media(max-width: 1100px) {
+    .main-help-container {
+        margin-top: 120px;
+        margin-left: 40px;
+        margin-right: 40px;
+        margin-bottom: 120px;
+    }
+
+    .arrow {
+        position: fixed;
+        top: 120px;
+        right: 40px;
+    }
+
+    h1 {
+        font-size: 47px;
+    }
+
+    h2 {
+        font-size: 24px;
+    }
+
+    h3 {
+        font-size: 18px;
+    }
+}
+
+@media(max-width: 480px){
+    h1 {
+        font-size: 32px;
+    }
+
+    h2 {
+        font-size: 18px;
+    }
+}
+
+@media(max-width: 350px){
+    .main-help-container {
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+}
