--- a/styles/privacyPolicy.css
+++ b/styles/privacyPolicy.css
@@ -37,3 +37,51 @@ h4 {
 a {
     color: black;
 }
+
+img {
+    cursor: pointer;
+}
+
+@media(max-width: 1100px) {
+    .privacy-policy-container {
+        margin-top: 120px;
+        margin-left: 40px;
+        margin-right: 40px;
+        margin-bottom: 120px;
+    }
+
+    .arrow {
+        position: fixed;
+        top: 120px;
+        right: 40px;
+    }
+
+    h1 {
+        font-size: 47px;
+    }
+
+    h2 {
+        font-size: 24px;
+    }
+
+    h3 {
+        font-size: 18px;
+    }
+}
+
+@media(max-width: 480px){
+    h1 {
+        font-size: 32px;
+    }
+
+    h2 {
+        font-size: 18px;
+    }
+}
+
+@media(max-width: 350px){
+    .privacy-policy-container {
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+}
