date of tasks now like design

--- a/styles/board.css
+++ b/styles/board.css
@@ -293,3 +293,7 @@ height: 32px;
     background-color: lightgrey;
     height: 25px;
 }
+
+.focusBlueBorder:focus {
+    border: 1px solid #29ABE2;
+}
