--- a/styles/board.css
+++ b/styles/board.css
@@ -133,7 +133,8 @@ input {
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 24px; 
+    height: 24px;
+    margin-bottom: 20px;
 }
 
 .plus {
@@ -160,12 +161,10 @@ input {
     width: 100%; 
     height: 24px; 
     gap: 35px;
+    margin-bottom: 20px;
 }
 .lineUp {
     min-width: 244px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
 }
 
 .taskWrapper {
@@ -175,6 +174,12 @@ input {
     width: calc(100vw - 360px);
     max-width: 1440px;
     margin-top: 20px;
+}
+
+.boardTasks {
+    display: flex;
+    justify-content: space-between;
+    gap: 26px;
 }
 
 .toDoColumn {
@@ -189,7 +194,8 @@ input {
     display: flex; 
     flex-direction: column;
     width: 244px; 
-    gap: 16px; 
+    gap: 16px;
+    height: fit-content;
 }
 
 .card {
@@ -350,4 +356,44 @@ input {
 
 .focusBlueBorder:focus {
     border: 1px solid #29ABE2;
+}
+
+@media(max-width: 1100px) {
+    .main-board-container {
+        margin-left: 20px;
+        margin-right: 20px;
+        margin-top: 128px;
+        margin-bottom: 80px;
+        width: calc(100vw - 40px);
+        height: 100vh;
+    }
+
+    .menuwrapper {
+        width: calc(100vw - 40px);
+        
+    }
+
+    .menubar {
+        width: calc(100vw - 40px);
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .taskWrapper {
+        width: calc(100vw - 40px);
+    }
+
+    .progressBar {
+        flex-direction: column;
+        width: calc(100vw - 40px);
+        margin-bottom: 80px;
+    }
+
+    .column {
+        flex-direction: row;
+    }
+
+    .menubar button {
+        display: none;
+    }
 }
