--- a/styles/board.css
+++ b/styles/board.css
@@ -1,3 +1,13 @@
+body {
+    margin: 0;
+    font-family: "Inter", sans-serif;
+}
+
+@font-face {
+    font-family: "Inter", sans-serif;
+    src: url(/fonts/inter-v13-latin-regular.woff2);
+}
+
 .main-board-container {
     width: calc(100vw - 360px);
     max-width: 1440px;
@@ -49,6 +59,9 @@
     margin-bottom: 0;
     width: unset;
     border: none;
+    font-size: 20px;
+    padding: 4px 16px;
+    cursor: pointer;
 }
 
 .inputRight {
@@ -70,20 +83,6 @@
 
 .searchIcon:hover {
     background-color: #eeeeee;
-    cursor: pointer;
-}
-
-input {
-    height: 36px;
-    width: 336px;
-    font-family: "Inter", sans-serif;
-    font-size: 20px;
-    font-weight: 400;
-    color: #000000;
-    border-radius: 8px;
-    border: solid 1px #d1d1d1;
-    margin-bottom: 32px;
-    padding: 4px 16px;
     cursor: pointer;
 }
 
