--- a/styles/board.css
+++ b/styles/board.css
@@ -3,6 +3,10 @@ body {
     font-family: "Inter", sans-serif;
 }
 
+.boardBody {
+    overflow-x: hidden;
+}
+
 @font-face {
     font-family: "Inter", sans-serif;
     src: url(/fonts/inter-v13-latin-regular.woff2);
@@ -380,6 +384,23 @@ body {
 
 .heightAsContent {
     height: fit-content !important;
+}
+
+.overFlowXHidden {
+    overflow-x: hidden;
+}
+
+.animationRightSlideIn {
+    animation: rightSlideIn 1s forwards;
+}
+
+@keyframes rightSlideIn {
+    from {
+        transform: translateX(100vw);
+    }
+    to {
+        transform: translateX();
+    }
 }
 
 @media(max-width: 1100px) {
