--- a/styles/board.css
+++ b/styles/board.css
@@ -9,19 +9,10 @@ body {
 }
 
 .main-board-container {
-    width: calc(100vw - 360px);
-    max-width: 1440px;
-    height: calc(100vh - 175.5px);
-    margin-left: 296px;
-    margin-top: 175.5px;
-    margin-right: 64px;
-}
-
-.menuwrapper {
-    display: flex; 
+    width: 100%;
+    display: flex;
     flex-direction: column;
-    width: calc(100vw - 360px);
-    max-width: 1440px;
+    overflow: hidden;
 }
 
 .menubar {
@@ -31,6 +22,8 @@ body {
     width: calc(100vw - 360px);
     margin-bottom: 40px;
     max-width: 1440px;
+    margin-top: 175.5px;
+    margin-left: 296px;
 }
 
 .headline {
@@ -43,6 +36,11 @@ body {
 
 .menubar h2 {
     font-size: 52px;
+}
+
+.headlineBoardTasks {
+    font-size: 20px;
+    font-weight: 700;
 }
 
 .fakeInput {
@@ -120,11 +118,13 @@ body {
 
 .progressBar {
     width: calc(100vw - 360px);
-    height: 24px; 
     display: flex; 
     justify-content: space-between; 
     max-width: 1440px;
     gap: 26px;
+    height: calc(100vh - 285.5px);
+    margin-left: 296px;
+    overflow: scroll;
 }
 
 .progressHead {
@@ -132,7 +132,7 @@ body {
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 24px;
+    height: 28px;
     margin-bottom: 20px;
 }
 
@@ -166,21 +166,6 @@ body {
     min-width: 244px;
 }
 
-.taskWrapper {
-    display: flex;
-    justify-content: space-between;
-    gap: 26px;
-    width: calc(100vw - 360px);
-    max-width: 1440px;
-    margin-top: 20px;
-}
-
-.boardTasks {
-    display: flex;
-    justify-content: space-between;
-    gap: 26px;
-}
-
 .toDoColumn {
     display: flex; 
     flex-direction: column;
@@ -192,7 +177,6 @@ body {
 .column {
     display: flex; 
     flex-direction: column;
-    width: 244px; 
     gap: 16px;
     height: fit-content;
 }
@@ -220,7 +204,6 @@ body {
     box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.16); 
     color: #A8A8A8;
     border: 1px solid rgba(168, 168, 168, 1)
-
 }
 
 .cardInsideFrame {
@@ -273,12 +256,12 @@ body {
 }
 
 #boardTaskOverlay>div {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0,0,0,0.08); 
+    background-color: rgba(0,0,0,0.3); 
     z-index: 100;
 }
 
@@ -380,35 +363,30 @@ body {
     height: fit-content !important;
 }
 
+.addTaskPlus {
+    display: none;
+}
+
 @media(max-width: 1100px) {
-    .main-board-container {
+    .menubar {
         margin-left: 20px;
         margin-right: 20px;
         margin-top: 128px;
-        margin-bottom: 80px;
-        width: calc(100vw - 40px);
-        height: 100vh;
-    }
-
-    .menuwrapper {
-        width: calc(100vw - 40px);
-        
-    }
-
-    .menubar {
         width: calc(100vw - 40px);
         flex-direction: column;
-        justify-content: center;
-    }
-
-    .taskWrapper {
-        width: calc(100vw - 40px);
+        margin-bottom: 20px;
+        align-items: flex-start;
+        display: block;
     }
 
     .progressBar {
         flex-direction: column;
         width: calc(100vw - 40px);
-        margin-bottom: 80px;
+        margin-left: 20px;
+        margin-right: 20px;
+        height: fit-content;
+        margin-bottom: 100px;
+        overflow: hidden;
     }
 
     .column {
@@ -417,5 +395,49 @@ body {
 
     .menubar button {
         display: none;
+    }
+
+    .lineUp {
+        overflow: scroll;
+    }
+
+    .searchAdd {
+        margin-top: 40px;
+        gap: 0;
+        width: calc(100vw - 40px);
+        justify-content: center;
+    }
+
+    .fakeInput {
+        width: 100%;
+    }
+
+    .headline {
+        justify-content: space-between;
+        font-size: 47px;
+    }
+
+    .addTaskPlus {
+        display: block;
+        cursor: pointer;
+    }
+}
+
+@media(max-width: 350px) {
+    .menubar {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .progressBar {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .searchAdd {
+        margin-top: 40px;
+        gap: 0;
+        width: calc(100vw - 20px);
+        justify-content: center;
     }
 }
