--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -15,6 +15,10 @@ body {
     max-width: 1440px;
 }
 
+.input-fields input {
+    text-transform: capitalize;
+}
+
 .left-side {
     height: calc(100vh - 96px);
     margin-top: 96px;
