--- a/styles/summary.css
+++ b/styles/summary.css
@@ -243,6 +243,13 @@ a {
     margin-top: 180px;
     margin-left: 50px;
     padding-right: 10%;
+    opacity: 1;
+    transition: opacity 0.5s ease;
+}
+
+#greetContainer {
+    opacity: 1;
+    transition: opacity 0.5s ease;
 }
 
 .greeting-content {
@@ -312,6 +319,7 @@ a {
 .p-absolut {
     position: absolute;
 }
+
 .d-flex {
     display: flex;
 }
@@ -326,13 +334,20 @@ a {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    /* opacity: 0; */
+    opacity: 1;
+    /* transition: opacity 0.5s ease; */
+}
+
+@media screen and (max-width: 1310px) {
+    .greet-container {
+        display: none;
+    }
+
 }
 
 @media screen and (max-width: 1100px) {
 
-    .greet-container {
-        display: none;
-    }
 
     .summary-container-wrapper {
         justify-content: center;
@@ -422,12 +437,10 @@ a {
     }
 
     .button-container {
-        padding-left: 20px;
-        padding-right: 20px;
+        padding-left: 28px;
+        padding-right: 28px;
 
     }
-
-
 
     .line {
         margin: 5px;
@@ -441,5 +454,43 @@ a {
 
     .overview-container {
         gap: 10px;
+    }
+}
+
+@media screen and (max-width: 407px) {
+    .button-container {
+        padding-left: 18px;
+        padding-right: 18px;
+    }
+
+    .task-container {
+        min-width: 90px;
+        min-height: 90px;
+
+    }
+}
+
+@media screen and (max-width: 347px) {
+    .button-container {
+        padding-left: 9px;
+        padding-right: 9px;
+    }
+
+    .task-container {
+        min-width: 30px;
+        min-height: 30px;
+        word-wrap: break-word;
+        text-wrap: wrap;
+    }
+
+    .urgency-container {
+        justify-content: space-between;
+
+    }
+
+    .deadline {
+        width: auto;
+        word-wrap: break-word;
+        text-wrap: wrap;
     }
 }
