Update CSS Add Task

--- a/styles/addTask.css
+++ b/styles/addTask.css
@@ -1,46 +1,67 @@
 body {
-    font-size:20px; 
-    font-weight: 400;
+    margin: 0;
+    font-family: "Inter", sans-serif;
+}
+
+@font-face {
+    font-family: "Inter", sans-serif;
+    src: url(/fonts/inter-v13-latin-regular.woff2);
+}
+
+.main-add-task-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 1440px;
+    height: 100vh;
 }
 
 .addTask {
-    width: 278px; 
-    height: 73px; 
-    position:absolute; 
-    top: 206px; 
-    left: 328px; 
-    gap: 1px; 
+    margin-left: 328px;
+    margin-right: 40px;
+    margin-top: 206px;
+    margin-bottom: 40px;
     color: rgba(0, 0, 0, 1);
     font-size: 61px;
     font-weight: 700;
+}
 
+.taskWrapper {
+    margin-left: 328px;
+    display: flex;
+    margin-right: 40px;
+    justify-content: center;
+    height: 424px;
+}
 
+.parting-line {
+    height: 375px;
+    width: 1px;
+    background-color: #D1D1D1;
 }
 
 .taskFrame {
-    width: 440px; 
-    height: 376px; 
-    position: absolute; 
-    top: 327px; 
-    left: 328px; 
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    width: 50%;
+    height: 376px;
 }
 
 .taskTitle {
     display: flex; 
     flex-direction: column;
     width: 440px;
-    height: 96px;
     gap: 8px;
 }
 
 .taskTitle input {
-    padding: 12px 21px 12px 21px; 
     border-radius: 10px;
     border: 1px solid rgba(168, 168, 168, 1);
     font-size: 20px;
     font-weight: 400;
     color:rgba(209, 209, 209, 1);
-
+    height: 48px;
 }
 
 .red {
@@ -52,31 +73,24 @@ body {
     flex-direction: column;
     width: 440px; 
     height: 168px; 
-    position:absolute;
-    top: 112px;
     gap: 8px;
 }
 
 .description textarea {
     display: flex; 
     gap: 4px;
-    width: 440px; 
     height: 136px; 
     font-size: 20px;
     font-weight: 400;
     color:rgba(209, 209, 209, 1);
-    padding: 18px 16px 18px 16px;
-
 }
 
 .assign {
     width: 440px; 
     height: 80px;
-    position: absolute; 
     top: 296px; 
     display: flex; 
     flex-direction: column;
-    
     gap: 4px;
 }
 
@@ -97,28 +111,28 @@ select#assign {
     background-image: url('../img/arrow_drop_down.png'); 
     background-position: right 8.39px top 20px;
     background-repeat: no-repeat; 
-    
 }
 
 .taskFrame2 {
-    width: 440px; 
-    height: 376px; 
-    position: absolute; 
-    top: 327px; 
-    left: 864.5px; 
+    width: 50%;
+    height: 424px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 16px;
 }
+
 .deadline {
     width: 440px; 
-    height: 96px; 
     display: flex; 
     flex-direction: column;
-    gap: 4px;
+    gap: 8px;
     font-size: 18px;
     font-weight: 400;
 }
 
 .deadline input {
-    padding: 12px 16px 12px 16px; 
+    height: 48px;
     border-radius: 10px;
     border: 1px solid rgba(168, 168, 168, 1);
     color:rgba(209, 209, 209, 1);
@@ -127,19 +141,22 @@ select#assign {
     background-position: top 10px right 10px;
 }
 
+input[type="date"]::-webkit-inner-spin-button,
+input[type="date"]::-webkit-calendar-picker-indicator {
+  filter: invert(1);
+}
+
 .priority {
     display: flex; 
     flex-direction: column;
     gap: 8px; 
     width: 440px; 
-    height: 88px; 
-    position: absolute; 
-    top: 120px; 
+    height: 88px;
 }
+
 .prio {
     display: flex;
     gap: 16px;
-   
 }
 
 .prio button {
@@ -147,28 +164,25 @@ select#assign {
     height: 56px; 
     border-radius: 10px; 
     padding: 16px 10px 16px 10px; 
-   background-color: rgba(255, 255, 255, 1);
+    background-color: rgba(255, 255, 255, 1);
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.1);
     display:flex; 
     align-items: center;
     justify-content: center;
     gap: 8px;
-   font-size: 20px;
-   font-weight: 400;
-   cursor: pointer;
+    font-size: 20px;
+    font-weight: 400;
+    cursor: pointer;
 }
 
 .active {
     background-color: rgba(255, 168, 0, 1) !important;
     color: white;
-
 }
 
 .category {
     width: 440px; 
     height: 80px; 
-    position: absolute; 
-    top: 232px; 
     display: flex; 
     flex-direction: column;
     gap: 8px;
@@ -177,7 +191,6 @@ select#assign {
 .subtasks {
     width: 440px; 
     height: 80px; 
-    position: absolute; 
     top: 336px; 
     display: flex;
     flex-direction: column;
@@ -199,12 +212,17 @@ select#assign {
     
 }
 
+.required-create {
+    margin-left: 328px;
+    margin-right: 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
 .required {
     width: 170px; 
-    height: 27px; 
-    position: absolute; 
-    top: 926px; 
-    left: 328px; 
+    height: 27px;  
     display: flex;
     font-size: 15px; 
     font-weight: 400;
@@ -213,12 +231,10 @@ select#assign {
 .create {
     width: 309px; 
     height: 56px; 
-    position: absolute;
     top: 889px; 
     left: 995.25px; 
     display: flex; 
     gap: 16px;
-    
 }
 
 .clear {
@@ -236,6 +252,11 @@ select#assign {
     cursor: pointer;
 }
 
+.clear:hover {
+    color: rgb(41,171,226);
+    border-color: rgb(41,171,226);
+}
+
 .createTask {
     display: flex; 
     align-items: center;
@@ -251,7 +272,8 @@ select#assign {
     font-size: 21px; 
     font-weight: 700;
     cursor: pointer;
-
 }
 
-  
+.createTask:hover {
+    background-color: rgb(41,171,226);
+}
