grey background on hover subtasks

--- a/styles/board.css
+++ b/styles/board.css
@@ -331,6 +331,10 @@ body {
     border-radius: 5px;
 }
 
+.borderRadius10 {
+    border-radius: 10px;
+}
+
 .hoverGrey:hover {
     background-color: #eeeeee;
     cursor: pointer;
