--- a/styles/index.css
+++ b/styles/index.css
@@ -62,10 +62,22 @@ h1 {
     width: calc(100% - 26px);
 }
 
+.width100PercMinus16Px {
+    width: calc(100% -16px);
+}
+
 /* ---------- PADDING AND MARGIN ---------- */
 
 .padTop5 {
     padding-top: 5px;
+}
+
+.padTop10 {
+    padding-top: 10px;
+}
+
+.padRight18 {
+    padding-right: 18px;
 }
 
 .padTop20 {
@@ -106,6 +118,10 @@ h1 {
 
 .padBot5 {
     padding-bottom: 5px;
+}
+
+.padBot10 {
+    padding-bottom: 10px;
 }
 
 .marBot20 {
