loggedOut header and navbar

--- a/templates/header.html
+++ b/templates/header.html
@@ -11,13 +11,13 @@
   <body>
     <!-- hier beginnt die html des header -->
     <div id="header" class="header">
-      <div class="header-container">
+      <div class="header-container"">
         <div class="logo-mobile d-none">
-          <img src="../img/join_logo.png" alt="logo" />
+          <img src="../img/join_logo.png" alt="logo"/>
         </div>
         <span class="title">Kanban Project Management Tool</span>
         <div class="icon-container">
-          <div class="help-container">
+          <div class="help-container" id="helpContainer">
             <img
               src="../img/help.png"
               alt="help"
