--- a/styles/summary.css
+++ b/styles/summary.css
@@ -344,6 +344,51 @@ a {
     /* transition: opacity 0.5s ease; */
 }
 
+.error-container {
+    text-align: center;
+    background-color: #2A3647;
+    color: #fff;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.error-container h1 {
+    margin-block-start: 0;
+}
+  
+.error-container p {
+    font-size: 1.2em;
+    margin-bottom: 5px;
+}
+  
+.error-container p:last-child {
+    margin-bottom: 20px;
+}
+  
+.error-container a {
+    color: white;
+    text-decoration: underline;
+}
+
+.login-button {
+    padding: 10px 20px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+    width: 200px;
+    text-align: center;
+    color: white;
+}
+
+.login-button-div {
+    margin-top: 20px;
+}
+
+.login-button:hover {
+    background-color: #1c7ca8;
+}
+
 @media screen and (max-width: 1310px) {
     .greet-container {
         display: none;
