--- a/styles/addTask.css
+++ b/styles/addTask.css
@@ -92,8 +92,32 @@ body {
     top: 296px; 
     display: flex; 
     flex-direction: column;
-    gap: 4px;
+    gap: 8px;
 }
+
+.assign input {
+    height: 48px; 
+    border: 1px solid; 
+    border-radius: 10px;
+    padding: 12px 16px; 
+    font-size: 16px;
+    background-image: url('../img/arrow_drop_down.png'); 
+    background-position: right 10px top 25px;
+    background-repeat: no-repeat; 
+}
+
+.contacts-dropdown {
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+    position: absolute;
+    width: 440px;
+    background: white;
+    max-height: 200px;
+    overflow-y: auto;
+    z-index: 1000; }
+
+
 
 .dropdown select{
     width: 440px; 
@@ -105,14 +129,7 @@ body {
     padding-left: 10px;
 }
 
-select#assign {
-    appearance: none; 
-    -webkit-appearance: none; 
-    -moz-appearance: none; 
-    background-image: url('../img/arrow_drop_down.png'); 
-    background-position: right 8.39px top 20px;
-    background-repeat: no-repeat; 
-}
+
 
 .taskFrame2 {
     width: 50%;
@@ -369,7 +386,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
         width: 396px;
     }
 
-    .dropdown select {
+    .assign input {
         width: 396px;
         height: 40px;
         font-size: 16px;
