--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -15,7 +15,7 @@ body {
     max-width: 1440px;
 }
 
-.input-fields input {
+#contactName {
     text-transform: capitalize;
 }
 
@@ -566,8 +566,7 @@ a {
     top: 80%;
     left: 80%;
     padding: 10px;
-    flex-direction: column;
-    align-items: flex-start;
+    display: none;
     border-radius: 20px 20px 0px 20px;
     background: #fff;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
@@ -781,6 +780,10 @@ a {
     .successfully-created {
         top: 80%;
         width: 70%;
+    }
+
+    .edit-delete-mobile {
+        display: block;
     }
 }
 
